<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.vepo</groupId>
	<artifactId>io.vepo.twitter4j</artifactId>
	<version>0.0.3-SNAPSHOT</version>
	<name>Java Library for Twitter Bot</name>
	<description>Emcapsulate Twitter API on a library</description>
	<packaging>jar</packaging>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<sonar.projectKey>vepo_twitter4j</sonar.projectKey>
		<sonar.organization>vepo-github</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.projectVersion>${project.version}</sonar.projectVersion>
		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
		<sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.13.2</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.13.2</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.0-alpha6</version>
			<optional>true</optional>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.security</groupId>
			<artifactId>oauth1-client</artifactId>
			<version>3.0.4</version>
		</dependency>

		<!-- TESTS -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.8.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>5.8.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>nl.jqno.equalsverifier</groupId>
			<artifactId>equalsverifier</artifactId>
			<version>3.9</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.jparams</groupId>
			<artifactId>to-string-verifier</artifactId>
			<version>1.4.8</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mock-server</groupId>
			<artifactId>mockserver-junit-jupiter</artifactId>
			<version>5.12.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<finalName>twitter4j</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<argLine>
						<![CDATA[
							@{argLine}
							--add-modules ALL-SYSTEM
							--add-opens java.base/jdk.internal.util=ALL-UNNAMED
							--add-opens java.base/java.lang.reflect=ALL-UNNAMED
							--add-opens io.vepo.twitter4j/io.vepo.twitter4j=ALL-UNNAMED
							--add-opens io.vepo.twitter4j/io.vepo.twitter4j.stream=ALL-UNNAMED
							--add-opens io.vepo.twitter4j/io.vepo.twitter4j.impl=ALL-UNNAMED
							--add-exports io.vepo.twitter4j/io.vepo.twitter4j.impl.api=com.fasterxml.jackson.databind
						]]>
					</argLine>
					<systemPropertyVariables>
						<jacoco.destfile>${sonar.coverage.jacoco.xmlReportPaths}</jacoco.destfile>
					</systemPropertyVariables>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>3.9.1.2184</version>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.7</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<append>true</append>
						</configuration>
					</execution>
					<execution>
						<id>prepare-agent-integration</id>
						<goals>
							<goal>prepare-agent-integration</goal>
						</goals>
						<configuration>
							<append>true</append>
						</configuration>
					</execution>
					<execution>
						<id>jacoco-site</id>
						<phase>verify</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
					<execution>
						<id>post-unit-test</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<scm>
		<url>scm:git:https://github.com/vepo/twitter4j.git</url>
		<connection>scm:git:https://github.com/vepo/twitter4j.git</connection>
		<developerConnection>scm:git:https://github.com/vepo/twitter4j.git</developerConnection>
		<tag>HEAD</tag>
	</scm>
</project>